minor improvements to tests, SlingLoginCookieManager: make sure timeout is initialized before passing it to TokenStore constructor